bug fixes to evaluation method and convert method. Ability to write out gold standard info on the CoNLLWriter